update neo4j doc